# looped

./: .gitignore  README.md
.github/workflows/: backend-tests.yml  frontend-tests.yml
api/: models.py  pattern_factory.py
api/patterns/: __init__.py  base.py  tote.py
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: calculations.py  output_formatter.py  stitch_library.py
backend/app/generators/: __init__.py  base.py  tote.py
backend/app/models/: __init__.py  pattern.py
backend/app/services/: crochet_parade.py  gauge_service.py  pattern_service.py  validation_service.py
backend/app/utils/: constants.py  exceptions.py  validators.py
backend/tests/: conftest.py
backend/tests/test_api/: test_routes.py
docs/: API.md  ARCHITECTURE.md  ERD.md  SETUP.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/tote/: page.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/components/forms/: DimensionsInput.tsx  GaugeInput.tsx  ImageUpload.tsx  ItemTypeSelector.tsx  StitchSelector.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Navigation.tsx
frontend/src/components/pattern/: PatternDisplay.tsx  PatternDownload.tsx  PatternSection.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Select.tsx
frontend/src/lib/api/: client.ts  endpoints.ts
frontend/tests/components/: .gitkeep
(+10 files in other folders)
